syntax = "proto3";

option go_package = "github.com/resource-aware-jds/resource-aware-jds/generated/proto";

package controlplane;

import "google/protobuf/empty.proto";

service ControlPlane {
  rpc WorkerRegistration(ComputeNodeRegistrationRequest) returns (ComputeNodeRegistrationResponse);
  rpc CreateJob(CreateJobRequest) returns (CreateJobResponse);
  rpc WorkerCheckIn(WorkerCheckInRequest) returns (google.protobuf.Empty);
}

message WorkerCheckInRequest {
  string ip = 1;
  int32 port = 2;
  bytes certificate = 3;
}

message ComputeNodeRegistrationRequest {
  string ip = 1;
  int32 port = 2;
  bytes nodePublicKey = 3;
}

message ComputeNodeRegistrationResponse {
  string id = 1;
  bytes certificate = 2;
}

message ControlPlaneTask {
  string ID = 1;
  string Status = 2;
  bytes TaskAttributes = 3;
}

message CreateJobRequest {
  string ImageURL = 1;
  repeated bytes TaskAttributes = 2;
}

message CreateJobResponse {
  string ID = 1;
  repeated ControlPlaneTask Tasks = 2;
  string Status = 3;
  string ImageURL = 4;
}